<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BiodataActivity">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:background="#FFF"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#F8F8F8"
            >

            <TextView
                android:layout_width="270dp"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_marginTop="80dp"
                android:padding="16dip"
                android:text="@string/txt1"
                android:textColor="#202020"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editTextNama"
                android:layout_width="351dp"
                android:layout_height="62dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="16dp"
                android:layout_marginTop="120dp"
                android:background="@drawable/input_border"
                android:ems="10"
                android:hint="@string/hint1"
                android:inputType="textPersonName"/>

            <TextView
                android:layout_width="270dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="200dp"
                android:padding="16dip"
                android:text="@string/txt2"
                android:textColor="#202020"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editTextUmur"
                android:layout_width="351dp"
                android:layout_height="62dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="16dp"
                android:layout_marginTop="240dp"
                android:background="@drawable/input_border"
                android:ems="10"
                android:hint="@string/hint2"
                android:autofillHints="@string/hint2"
                android:inputType="number"/>

        </RelativeLayout>

        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/footer"
            android:layout_width="match_parent"
            android:layout_height="127dp"
            android:layout_alignParentBottom="true"
            android:background="#F8F8F8"
            android:gravity="center">

            <Button
                android:id="@+id/buttonBiodata"
                android:layout_width="200dp"
                android:layout_height="36dp"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/button"
                android:text="@string/next"
                android:textStyle="bold"
                android:textAllCaps="false"
                android:layout_marginTop="30dp"
                tools:layout_editor_absoluteX="36dp"
                tools:layout_editor_absoluteY="447dp" />

        </RelativeLayout>

    </RelativeLayout>
</android.support.constraint.ConstraintLayout>