<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:background="#FFF"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#F8F8F8"
            >

            <TextView
                android:layout_width="270dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="80dp"
                android:padding="12dip"
                android:text="@string/kk"
                android:textColor="#202020"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="12dip"
                android:text="@string/inpKk"
                android:textColor="#202020"
                android:layout_marginTop="110dp"
                android:textSize="18sp"/>

            <EditText
                android:id="@+id/editText"
                android:layout_width="313dp"
                android:layout_height="50dp"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="49dp"
                android:layout_marginTop="180dp"
                android:ems="10"
                android:background="@drawable/input_round"
                android:inputType="textPersonName"
                android:textAlignment="center"
                android:text="@string/code"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/textPersetujuan"
                android:layout_width="294dp"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="34dp"
                android:layout_marginTop="244dp"
                android:textAlignment="center"
                android:textColor="#202020"
                android:textSize="11sp" />

            <Button
                android:id="@+id/buttonInput"
                android:layout_width="313dp"
                android:layout_height="36dp"
                android:background="@drawable/button"
                android:text="@string/masuk"
                android:textStyle="bold"
                android:textAllCaps="false"
                android:layout_gravity="center_horizontal"
                android:layout_centerInParent="true"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:layout_marginTop="90dp"
                android:layout_marginBottom="20dip" />

        </RelativeLayout>

        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/footer"
            android:layout_width="match_parent"
            android:layout_height="127dp"
            android:layout_alignParentBottom="true"
            android:background="#FFF"
            android:gravity="center">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="71dp"
                android:text="@string/noneKk" />

            <Button
                android:id="@+id/buttonKode"
                android:layout_width="313dp"
                android:layout_height="36dp"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/button2"
                android:text="@string/pay"
                android:textStyle="bold"
                android:textAllCaps="false"
                android:textColor="#FFF"
                android:layout_marginTop="30dp"
                tools:layout_editor_absoluteX="36dp"
                tools:layout_editor_absoluteY="447dp" />

        </RelativeLayout>

    </RelativeLayout>
</android.support.constraint.ConstraintLayout>