<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:background="#FFF"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#F8F8F8"
            >

            <ImageView
                android:id="@+id/imageView2"
                android:layout_marginTop="100dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:contentDescription="@string/img"
                app:srcCompat="@drawable/ic_get_start_timitory" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="270dp"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="90dp"
                android:layout_marginBottom="20dip"
                android:padding="12dip"
                android:text="@string/start"
                android:textAlignment="center"
                android:textColor="#202020"
                android:textSize="20sp"
                android:textStyle="bold" />

        </RelativeLayout>

        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/footer"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:layout_alignParentBottom="true"
            android:background="#FFF"
            android:gravity="center">

            <Button
                android:id="@+id/buttonLogin"
                android:layout_width="313dp"
                android:layout_height="36dp"
                android:background="@drawable/button"
                android:text="@string/mulai"
                android:textStyle="bold"
                android:textAllCaps="false"
                android:layout_gravity="center_horizontal"
                tools:layout_editor_absoluteX="36dp"
                tools:layout_editor_absoluteY="447dp" />

        </RelativeLayout>

    </RelativeLayout>

</android.support.constraint.ConstraintLayout>